--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ html {
 :root {
   --ff-primary: "Source Sans Pro", sans-serif;
   --ff-secondary: "Source Code Pro", monospace;
-  --shadow: 0.25em 0.25em 0.75em rgba(255, 255, 255, 0.9),
+  --shadow: 0.25em 0.25em 0.75em rgba(170, 100, 100, 0.9),
     0.125em 0.125em 0.25em rgba(255, 255, 255, 0.7);
 }
 
@@ -76,6 +76,8 @@ p {
 .about p {
   margin-bottom: 0.3rem;
 }
+
+/* Tours Section */
 
 @media screen and (min-width: 800px) {
   h1 {
@@ -145,7 +147,11 @@ p {
   .section-center {
     width: 95vw;
   }
+  .carousel {
+    height: 65vh;
+  }
 }
+
 main {
   min-height: 100vh;
   display: grid;
@@ -373,6 +379,10 @@ header {
   .social-icons a:hover {
     color: hsl(205, 90%, 76%);
   }
+
+  .carousel {
+    height: 55vh;
+  }
 }
 /* sections and title */
 .title h2 {
@@ -422,6 +432,86 @@ footer p {
 .show-link {
   visibility: visible;
   z-index: 100;
+}
+
+/* Slider */
+.carousel {
+  /* border: 2px solid hsl(209, 61%, 16%); */
+  width: 100vw;
+  margin: 0 auto;
+  height: 70vh;
+  position: relative;
+  overflow: hidden;
+  margin-top: 1rem;
+}
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: hsl(209, 61%, 16%);
+  color: #fff;
+  display: grid;
+  place-items: center;
+  transition: all 0.25s ease-in-out;
+  text-align: center;
+}
+.slide-img {
+  height: 100%;
+  object-fit: cover;
+}
+.slide h1 {
+  font-size: 5rem;
+}
+.person-img {
+  border-radius: 50%;
+  width: 6rem;
+  height: 6rem;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+.slide:nth-child(1) h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.slide:nth-child(3) {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("./img-2.jpeg") center/cover no-repeat;
+}
+.btn-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.75rem;
+}
+.prev-btn,
+.next-btn {
+  background: transparent;
+  border-color: transparent;
+  font-size: 1.75rem;
+  cursor: pointer;
+  margin: 0 0.5rem;
+  outline: none;
+  border: 2px solid hsl(209, 61%, 16%);
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  color: var(--clr-grey-5);
+  transition: var(--transition);
+}
+.prevBtn:hover,
+.nextBtn:hover {
+  color: hsl(209, 34%, 30%);
+}
+
+@media only screen and (min-width: 576px) {
+  .carousel {
+    height: 55vh;
+  }
+  #about,
+  #services,
+  #tours {
+    height: 80vh;
+  }
 }
 
 @keyframes bounce {
