--- a/style/style.css
+++ b/style/style.css
@@ -77,7 +77,7 @@ p {
   margin-bottom: 0.3rem;
 }
 
-/* Tours Section */
+/* Service Section */
 
 @media screen and (min-width: 800px) {
   h1 {
@@ -393,8 +393,7 @@ header {
   color: hsla(182, 63%, 54%);
 }
 #about,
-#services,
-#tours {
+#services {
   height: 90vh;
 }
 #services {
@@ -410,6 +409,14 @@ footer p {
   text-transform: capitalize;
   letter-spacing: 0.25rem;
   margin-bottom: 0;
+}
+
+.contact {
+  margin-bottom: 30px;
+}
+
+.contact p {
+  text-transform: lowercase;
 }
 
 .top-link {
@@ -439,7 +446,7 @@ footer p {
   /* border: 2px solid hsl(209, 61%, 16%); */
   width: 100vw;
   margin: 0 auto;
-  height: 70vh;
+  height: 40vh;
   position: relative;
   overflow: hidden;
   margin-top: 1rem;
@@ -459,26 +466,26 @@ footer p {
   height: 100%;
   object-fit: cover;
 }
-.slide h1 {
-  font-size: 5rem;
+.description {
+  font-size: 1rem;
 }
-.person-img {
+/* .person-img {
   border-radius: 50%;
   width: 6rem;
   height: 6rem;
   margin: 0 auto;
   margin-bottom: 1rem;
-}
-.slide:nth-child(1) h1 {
+} */
+/* .slide:nth-child(1) h1 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-.slide:nth-child(3) {
+} */
+/* .slide:nth-child(3) {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("./img-2.jpeg") center/cover no-repeat;
-}
+} */
 .btn-container {
   display: flex;
   justify-content: center;
@@ -492,7 +499,6 @@ footer p {
   cursor: pointer;
   margin: 0 0.5rem;
   outline: none;
-  border: 2px solid hsl(209, 61%, 16%);
   text-transform: capitalize;
   letter-spacing: 2px;
   color: var(--clr-grey-5);
@@ -509,7 +515,7 @@ footer p {
   }
   #about,
   #services,
-  #tours {
+  #projects {
     height: 80vh;
   }
 }
