--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,10 @@ img {
   display: block;
 }
 
+.fas {
+  font-size: 14px;
+}
+
 h1,
 h2,
 h3,
@@ -113,7 +117,7 @@ p {
   font-size: 28px;
 }
 .list {
-  font-size: 20px;
+  font-size: 18px;
   margin: 2px;
 }
 
@@ -449,7 +453,7 @@ header {
   color: hsla(182, 63%, 54%);
 }
 #about {
-  height: 85vh;
+  height: 90vh;
 }
 #skills {
   background: #fff;
