--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,6 @@ p {
 .intro {
   text-align: center;
   margin-bottom: 0.3rem;
-  /* color: hsl(209, 61%, 16%); */
 }
 
 .skill__cards {
@@ -217,7 +216,7 @@ nav {
   width: 100%;
   background: #fff;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  z-index: 2;
+  z-index: 5;
 }
 .fixed-nav .links a {
   color: hsl(209, 61%, 16%);
@@ -569,6 +568,9 @@ footer p {
 }
 
 @media only screen and (min-width: 576px) {
+  .profile img {
+    z-index: 2;
+  }
   .carousel {
     height: 55vh;
   }
