--- a/style/style.css
+++ b/style/style.css
@@ -316,7 +316,9 @@ nav {
 /* hero */
 header {
   min-height: 100vh;
-  background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7));
+  /* background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)); */
+  /* background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%); */
+  background-image: linear-gradient(to top, #9be15d 0%, #00e3ae 100%);
 }
 .banner {
   min-height: 100vh;
